<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:dialogTitle="@string/pref_language_dialog"
        android:entries="@array/pref_languages"
        android:entryValues="@array/pref_languages_values"
        android:defaultValue="en"
        android:key="list_languages"
        android:summary="@string/pref_language_description"
        android:title="@string/pref_language"
        android:icon="@drawable/ic_pref_language" />
    <!--
    <MultiSelectListPreference
        android:dialogTitle="@string/pref_word_difficulties_dialog"
        android:entries="@array/pref_word_difficulties"
        android:entryValues="@array/pref_word_difficulties_values"
        android:defaultValue="@array/pref_word_difficulties_defaults"
        android:key="list_word_difficulties"
        android:summary="@string/pref_word_difficulties_description"
        android:title="@string/pref_word_difficulties" />
    -->
    <MultiSelectListPreference
        android:dialogTitle="@string/pref_word_categories_dialog"
        android:entries="@array/pref_word_categories"
        android:entryValues="@array/pref_word_categories_values"
        android:defaultValue="@array/pref_word_categories_defaults"
        android:key="list_word_categories"
        android:summary="@string/pref_word_categories_description"
        android:title="@string/pref_word_categories"
        android:icon="@drawable/ic_pref_wordlist" />
    <ListPreference
        android:dialogTitle="@string/pref_duration_dialog"
        android:entries="@array/pref_durations"
        android:entryValues="@array/pref_durations_values"
        android:defaultValue="15"
        android:key="list_durations"
        android:summary="@string/pref_duration_description"
        android:title="@string/pref_duration"
        android:icon="@drawable/ic_pref_timer" />
    <ListPreference
        android:dialogTitle="@string/pref_penalty_dialog"
        android:entries="@array/pref_penalties"
        android:entryValues="@array/pref_penalties_values"
        android:defaultValue="0"
        android:key="list_penalties"
        android:summary="@string/pref_penalty_description"
        android:title="@string/pref_penalty"
        android:icon="@drawable/ic_pref_penalty" />
    <EditTextPreference
        android:dialogTitle="@string/pref_team_name_dialog"
        android:key="text_team_name"
        android:defaultValue="@string/pref_team_name_default"
        android:summary="@string/pref_team_name_description"
        android:title="@string/pref_team_name"
        android:inputType="text"
        android:singleLine="true"
        android:maxLines="1"
        android:icon="@drawable/ic_pref_teamname" />
</PreferenceScreen>