<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorAppMain"
    tools:context=".ScoresActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <LinearLayout
            android:id="@+id/linear_layout_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:weightSum="1"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp" >

            <TextView
                android:id="@+id/score_position"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_weight="0.45"
                android:background="@drawable/round_corner"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/score_header_rank" />

            <TextView
                android:id="@+id/score_team_name"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_weight="0.275"
                android:fontFamily="sans-serif-light"
                android:gravity="center_vertical"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:textAlignment="textStart"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/score_header_name" />

            <TextView
                android:id="@+id/score_points"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_weight="0.275"
                android:fontFamily="sans-serif-light"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/score_header_points" />

        </LinearLayout>

        <View
            style="@style/Divider"
            android:layout_marginTop="42dp"
            app:layout_constraintBottom_toTopOf="@+id/linear_layout_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_scores"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/linear_layout_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linear_layout_header" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
